testsuite/tests/grammar/invalid_list/token-element.lkt
grammar foo_grammar {
    @main_rule main_rule <- ListNode(ASTList[FooNode]+(@number))
}
